[package]
name = "smarther"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures = "0.3.27"
reqwest = { version = "0.11.15", features = ["stream", "json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["rt", "macros", "fs", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
url = "2.3.1"
actix-web = { version = "4.3.1", optional = true }
open = { version = "4.0.1", optional = true }
uuid = { version = "1.3.0", features = ["v4"],  optional = true }
serde-aux = "4.1.2"
chrono = { version = "0.4.24", features = ["serde"] }
async-channel = { version = "1.8.0",  optional = true }
log = "0.4.17"

[dev-dependencies]
actix-web = "4.3.1"
clap = { version = "4.1.12", features = ["derive"] }

[features]
web = ["dep:actix-web", "dep:open", "dep:uuid", "dep:async-channel"]

[[example]]
name = "cli"
required-features = ["web"]
